Don't need --enable-preview with java 17