@@ -70,7 +70,6 @@
                 <configuration>
                     <source>${javaVersion}</source>
                     <target>${javaVersion}</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
